[package]
name = "villn_REIGN"
version = "0.1.0"
edition = "2021"
authors = ["<smolnero@gmail.com>"]
description = "Millitary-grade IoT security framework"
license = "Proprietary License"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
