[package]
name = "reign"
version = "0.1.0"
edition = "2021"
authors = ["<smolnero@gmail.com>"]
description = "Millitary-grade IoT security framework"
license = "Proprietary License"

[lib]
name = "villin_reign"
path = "src/lib.rs"

[[bin]]
name = "villin_reign"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0",features = ["full"] }
tracing = "0.1"
thiserror = "1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Security-related dependenciess
ring =  "0.16"
serde = {version = "1.0", features = ["derive"]} # Serialization